--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
+    "graphql": "^15.4.0",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "urql": "^1.11.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.10",
+    "prettier": "^2.2.0",
+    "typescript": "^4.1.2"
+  }
 }
