--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "next": "latest",
     "next-urql": "^2.1.1",
     "react": "^17.0.1",
