--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.4",
     "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
@@ -18,6 +19,7 @@
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "next": "latest",
+    "next-apollo": "^5.0.4",
     "next-urql": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -29,6 +31,7 @@
     "@graphql-codegen/cli": "1.19.3",
     "@graphql-codegen/typescript": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.17.12",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@graphql-codegen/typescript-urql": "^2.0.3",
     "@types/node": "^14.14.10",
     "prettier": "^2.2.0",
