--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "with-chakra-ui",
-  "version": "0.1.0",
+  "name": "mireddit-client",
+  "version": "1.0.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
